--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,5 @@ skipsdist = True
 deps = -rrequirements.txt
 commands=py.test
 setenv =
-    DJANGO_SETTINGS_MODULE=settings.test
-    PYTHONPATH={toxinidir}:{toxinidir}
+    PYTHONPATH={toxinidir}:{toxinidir}/threeandthrees
     PYTHONDONTWRITEBYTECODE=1
-    DJANGO_DEBUG=True
